Client's change requests

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -104,12 +104,12 @@
     <string name="night_guard">नाईट गार्ड</string>
     <string name="police_verification">पुलिस वेरिफिकेशन </string>
     <string name="submit_police_verification_document">सबमिट पुलिस वेरिफिकेशन डॉक्यूमेंट </string>
-    <string name="mechanic_shop">मैकेनिक की दुकान 24 x 7</string>
+    <string name="mechanic_shop">मैकेनिक की दुकान</string>
     <string name="_24_x_7">24 x 7</string>
     <string name="day">दिन</string>
     <string name="no_shop">कोई दुकान नहीं</string>
-    <string name="puncture_shop">पंचर शॉप 24x7</string>
-    <string name="daily_utility_shop">दैनिक उपयोगिता की दुकान 24x7</string>
+    <string name="puncture_shop">पंचर शॉप</string>
+    <string name="daily_utility_shop">दैनिक उपयोगिता की दुकान</string>
     <string name="barber">नाई</string>
     <string name="in_premises">परिसर में</string>
     <string name="_1_200_m">1–200 M</string>
@@ -339,11 +339,11 @@
     <string name="highway_confirmation">क्या आप जोड़ना चाहते हैं</string>
     <string name="_dhaba_name">ढाबा का नाम</string>
     <string name="enter_dhaba_details_first">कृपया पहले ढाबा विवरण भरें।</string>
-    <string name="choose_mechanic">कृपया मैकेनिक शॉप 24x7 विकल्प चुनें।</string>
+    <string name="choose_mechanic">कृपया मैकेनिक शॉप विकल्प चुनें।</string>
     <string name="choose_mechanic_day">कृपया मैकेनिक शॉप डे विकल्प चुनें।</string>
-    <string name="choose_puncture">कृपया पंचर शॉप 24x7 विकल्प चुनें।</string>
+    <string name="choose_puncture">कृपया पंचर शॉप विकल्प चुनें।</string>
     <string name="choose_puncture_day">कृपया पंचर शॉप डे विकल्प चुनें।</string>
-    <string name="choose_daily_utility">कृपया दैनिक उपयोगिता 24x7 शॉप विकल्प चुनें।</string>
+    <string name="choose_daily_utility">कृपया दैनिक उपयोगिता शॉप विकल्प चुनें।</string>
     <string name="choose_utility_day">कृपया दैनिक उपयोगिता की दुकान दिवस विकल्प चुनें।</string>
     <string name="enter_valid_alt_number">कृपया वैध वैकल्पिक मोबाइल नंबर दर्ज करें</string>
     <string name="enter_mobile_number_mandatory">10 अंक मोबाइल नंबर *</string>
