--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -99,12 +99,12 @@
     <string name="night_guard">ਰਾਤ ਦੀ ਰਾਖੀ</string>
     <string name="police_verification">ਪੁਲਿਸ ਤਸਦੀਕ</string>
     <string name="submit_police_verification_document">ਪੁਲਿਸ ਤਸਦੀਕ ਦਸਤਾਵੇਜ਼ ਜਮ੍ਹਾਂ ਕਰੋ</string>
-    <string name="mechanic_shop">ਮਕੈਨਿਕ ਦੀ ਦੁਕਾਨ 24 x 7</string>
+    <string name="mechanic_shop">ਮਕੈਨਿਕ ਦੀ ਦੁਕਾਨ</string>
     <string name="_24_x_7">24 x 7</string>
     <string name="day">ਦਿਨ</string>
     <string name="no_shop">ਕੋਈ ਦੁਕਾਨ ਨਹੀਂ</string>
-    <string name="puncture_shop">ਪੰਕਚਰ ਦੀ ਦੁਕਾਨ 24x7</string>
-    <string name="daily_utility_shop">ਰੋਜ਼ਾਨਾ ਉਪਯੋਗਤਾ ਦੀ ਦੁਕਾਨ 24x7</string>
+    <string name="puncture_shop">ਪੰਕਚਰ ਦੀ ਦੁਕਾਨ</string>
+    <string name="daily_utility_shop">ਰੋਜ਼ਾਨਾ ਉਪਯੋਗਤਾ ਦੀ ਦੁਕਾਨ</string>
     <string name="barber">ਨਾਈ</string>
     <string name="in_premises">ਕੈਂਪਸ ਵਿੱਚ</string>
     <string name="_1_200_m">1–200 M</string>
@@ -332,11 +332,11 @@
     <string name="highway_confirmation">ਕੀ ਤੁਸੀਂ ਜੋੜਨਾ ਚਾਹੁੰਦੇ ਹੋ</string>
     <string name="_dhaba_name">ਢਾਬੇ ਦਾ ਨਾਮ</string>
     <string name="enter_dhaba_details_first">ਕਿਰਪਾ ਕਰਕੇ ਪਹਿਲਾਂ ਢਾਬੇ ਦਾ ਵੇਰਵਾ ਭਰੋ.</string>
-    <string name="choose_mechanic">ਕਿਰਪਾ ਕਰਕੇ ਮਕੈਨਿਕ ਸ਼ਾਪ 24x7 ਚੋਣ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_mechanic">ਕਿਰਪਾ ਕਰਕੇ ਮਕੈਨਿਕ ਸ਼ਾਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
     <string name="choose_mechanic_day">ਕਿਰਪਾ ਕਰਕੇ ਮਕੈਨਿਕ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
-    <string name="choose_puncture">ਕਿਰਪਾ ਕਰਕੇ ਪੰਕਚਰ ਸ਼ਾਪ 24x7 ਚੋਣ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_puncture">ਕਿਰਪਾ ਕਰਕੇ ਪੰਕਚਰ ਸ਼ਾਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
     <string name="choose_puncture_day">ਕਿਰਪਾ ਕਰਕੇ ਪੰਕਚਰ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
-    <string name="choose_daily_utility">ਕਿਰਪਾ ਕਰਕੇ ਰੋਜ਼ਾਨਾ ਸਹੂਲਤ 24x7 ਦੁਕਾਨ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_daily_utility">ਕਿਰਪਾ ਕਰਕੇ ਰੋਜ਼ਾਨਾ ਸਹੂਲਤ ਦੁਕਾਨ ਦੀ ਚੋਣ ਕਰੋ.</string>
     <string name="choose_utility_day">ਕਿਰਪਾ ਕਰਕੇ ਰੋਜ਼ਾਨਾ ਸਹੂਲਤ ਸ਼ਾਪ ਡੇਅ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
     <string name="enter_valid_alt_number">ਕਿਰਪਾ ਕਰਕੇ ਵੈਧ ਵਿਕਲਪਿਕ ਮੋਬਾਈਲ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
     <string name="enter_mobile_number_mandatory">10 ਅੰਕ ਮੋਬਾਈਲ ਨੰਬਰ *</string>
