--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -555,5 +555,6 @@
     <string name="choose_sleeping_option">Please choose sleeping option</string>
     <string name="open_24_x_7">Open 24 x 7</string>
     <string name="deleting_image">Deleting Image</string>
+    <string name="force_update_message">This version of app is not longer supported, Please update to keep using </string>
 
 </resources>
