--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -472,5 +472,7 @@
     <string name="open_24_x_7">24 x 7 ਖੋਲ੍ਹੋ</string>
     <string name="deleting_image">ਚਿੱਤਰ ਨੂੰ ਹਟਾਉਣਾ</string>
     <string name="force_update_message">ਐਪ ਦਾ ਇਹ ਸੰਸਕਰਣ ਲੰਮਾ ਸਹਿਯੋਗੀ ਨਹੀਂ ਹੈ, ਕਿਰਪਾ ਕਰਕੇ ਵਰਤਣ ਨੂੰ ਪੂਰਾ ਕਰਨ ਲਈ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="name_">ਨਾਮ *</string>
+    <string name="confirm_save_dhaba_details">ਕੀ ਤੁਸੀਂ ਢਾਬੇ ਦੇ ਵੇਰਵੇ ਸੁਰੱਖਿਅਤ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
 
 </resources>
