--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -558,6 +558,6 @@
     <string name="force_update_message">This version of app is not longer supported, Please update to keep using </string>
     <string name="name_">Name *</string>
     <string name="confirm_save_dhaba_details">Do you want to save dhaba details?</string>
-    <string name="details_saved">Details saved.</string>
+    <string name="sent_for_spproval">Sent for approval successfully</string>
 
 </resources>
