--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -481,4 +481,5 @@
     <string name="force_update_message">ऐप का यह संस्करण अब समर्थित नहीं है, कृपया उपयोग करने के लिए अद्यतन करें</string>
     <string name="name_">नाम *</string>
     <string name="confirm_save_dhaba_details">क्या आप ढाबा विवरण सहेजना चाहते हैं?</string>
+    <string name="sent_for_spproval">अनुमोदन के लिए सफलतापूर्वक भेजा गया</string>
 </resources>
