--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -442,37 +442,37 @@
     <string-array name="menu_array_owner">
         <item>@string/my_dhabas</item>
         <item>@string/notifications</item>
-        <item>@string/discount_offers</item>
-        <item>@string/my_orders</item>
-        <item>@string/customers</item>
-        <item>@string/shops</item>
+<!--        <item>@string/discount_offers</item>-->
+<!--        <item>@string/my_orders</item>-->
+<!--        <item>@string/customers</item>-->
+<!--        <item>@string/shops</item>-->
         <item>@string/helpline</item>
         <item>@string/settings</item>
     </string-array>
     <integer-array name="menu_icons_owner">
         <item>@drawable/ic_home</item>
-        <item>@drawable/ic_notification</item>
-        <item>@drawable/ic_discount_offer</item>
-        <item>@drawable/ic_my_orders</item>
-        <item>@drawable/ic_customers</item>
-        <item>@drawable/ic_shop</item>
+        <item>@drawable/ic_notification_filled</item>
+<!--        <item>@drawable/ic_discount_offer</item>-->
+<!--        <item>@drawable/ic_my_orders</item>-->
+<!--        <item>@drawable/ic_customers</item>-->
+<!--        <item>@drawable/ic_shop</item>-->
         <item>@drawable/ic_helpline</item>
         <item>@drawable/ic_settings</item>
     </integer-array>
     <integer-array name="menu_icons_hilighted_owner">
         <item>@drawable/ic_home_hilighted</item>
         <item>@drawable/ic_notification_hilighted</item>
-        <item>@drawable/ic_discount_offer_highlighted</item>
-        <item>@drawable/ic_my_orders_highlighted</item>
-        <item>@drawable/ic_customers_highlighted</item>
-        <item>@drawable/ic_shop_highlighted</item>
+<!--        <item>@drawable/ic_discount_offer_highlighted</item>-->
+<!--        <item>@drawable/ic_my_orders_highlighted</item>-->
+<!--        <item>@drawable/ic_customers_highlighted</item>-->
+<!--        <item>@drawable/ic_shop_highlighted</item>-->
         <item>@drawable/ic_helpline_hilighted</item>
         <item>@drawable/ic_settings_hilighted</item>
     </integer-array>
 
 
     <string-array name="menu_array_fiels_ex">
-        <item>@string/my_dhabas</item>
+        <item>@string/dhaba_mnagement</item>
         <item>@string/add_new_dhaba</item>
         <item>@string/notifications</item>
         <item>@string/settings</item>
@@ -481,7 +481,7 @@
     <integer-array name="menu_icons_fiels_ex">
         <item>@drawable/ic_home</item>
         <item>@drawable/ic_add_dhaba</item>
-        <item>@drawable/ic_notification</item>
+        <item>@drawable/ic_notification_filled</item>
         <item>@drawable/ic_settings</item>
     </integer-array>
 
