--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -559,5 +559,6 @@
     <string name="name_">Name *</string>
     <string name="confirm_save_dhaba_details">Do you want to save dhaba details?</string>
     <string name="sent_for_spproval">Sent for approval successfully</string>
+    <string name="location_settings">Location Settings</string>
 
 </resources>
