--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -475,5 +475,5 @@
     <string name="name_">ਨਾਮ *</string>
     <string name="confirm_save_dhaba_details">ਕੀ ਤੁਸੀਂ ਢਾਬੇ ਦੇ ਵੇਰਵੇ ਸੁਰੱਖਿਅਤ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
     <string name="sent_for_spproval">ਸਫਲਤਾਪੂਰਵਕ ਮਨਜ਼ੂਰੀ ਲਈ ਭੇਜਿਆ ਗਿਆ</string>
-
+    <string name="location_settings">ਸਥਾਨ ਸੈਟਿੰਗਾਂ</string>
 </resources>
