--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -483,4 +483,5 @@
     <string name="confirm_save_dhaba_details">क्या आप ढाबा विवरण सहेजना चाहते हैं?</string>
     <string name="sent_for_spproval">अनुमोदन के लिए सफलतापूर्वक भेजा गया</string>
     <string name="location_settings">स्थान सेटिंग</string>
+    <string name="no_dhaba_found">कोई ढाबा नहीं मिला</string>
 </resources>
