--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -134,7 +134,7 @@
     <string name="email_address">ईमेल पता</string>
     <string name="address">पता</string>
     <string name="pan_number">पैन नंबर</string>
-    <string name="aadhar_card_number">आधार कार्ड नंबर</string>
+    <string name="aadhar_card_number">आधार कार्ड नंबर *</string>
     <string name="upload_owner_picture">मालिक की तस्वीर अपलोड करें</string>
     <string name="upload_id_proof">आईडी प्रूफ अपलोड करें</string>
     <string name="we_accept_aadhar_card_pan_card_or_driving_license">हम आधार कार्ड, वोटर आईडी या ड्राइविंग लाइसेंस स्वीकार करते हैं</string>
@@ -486,4 +486,22 @@
     <string name="no_dhaba_found">कोई ढाबा नहीं मिला</string>
     <string name="dhaba_added_succesfully">ढाबा सफलतापूर्वक जोड़ा गया</string>
     <string name="this_is_the_id_number_of_added_dhaba">यह जोड़े गए ढाबे का आईडी नंबर है।</string>
+    <string name="voter_id">मतदाता आईडी *</string>
+    <string name="enter_voter_id_or_adhar_card">कृपया मतदाता आईडी या आधार कार्ड दर्ज करें</string>
+    <string name="owner_voter_id_or_adhar_card">मालिक की मतदाता आईडी या आदहर कार्ड</string>
+    <string name="enter_10_digit_mobile_no">10 अंकों का मोबाइल नंबर दर्ज करें।</string>
+    <string name="otp_expires_in">ओटीपी में समाप्त हो रहा है</string>
+    <string name="dhaba_address_mandatory">ढाबा पता *</string>
+    <string name="submitted_for_approval">अनुमोदन के लिए प्रस्तुत</string>
+    <string name="pending_dhabas">पेंडिंग ढाबा</string>
+    <string name="in_review_dhabas">इन ढाबा रिव्यू</string>
+    <string name="active_dhabas">सक्रिय ढाबा</string>
+    <string name="inactive_dhabas">निष्क्रिय ढाबे</string>
+    <string name="cities">शहरों</string>
+    <string name="states">राज्य</string>
+    <string name="highways">राजमार्गों</string>
+    <string name="banks">बैंकों</string>
+    <string name="failed_to_fetch">लाने में विफल रहे</string>
+    <string name="fields_with">" "</string>
+    <string name="asterisk_are_mandatory">वाले फ़ील्ड अनिवार्य हैं</string>
 </resources>
