--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -129,7 +129,7 @@
     <string name="email_address">ਈਮੇਲ ਖਾਤਾ</string>
     <string name="address">ਜਾਣੋ</string>
     <string name="pan_number">ਪੈਨ ਨੰਬਰ</string>
-    <string name="aadhar_card_number">ਆਧਾਰ ਕਾਰਡ ਨੰਬਰ</string>
+    <string name="aadhar_card_number">ਆਧਾਰ ਕਾਰਡ ਨੰਬਰ *</string>
     <string name="upload_owner_picture">ਮਾਲਕ ਦੀ ਫੋਟੋ ਅਪਲੋਡ ਕਰੋ</string>
     <string name="upload_id_proof">ਆਈਡੀ ਸਬੂਤ ਅਪਲੋਡ ਕਰੋ</string>
     <string name="we_accept_aadhar_card_pan_card_or_driving_license">ਅਸੀਂ ਆਧਾਰ ਕਾਰਡ, ਵੋਟਰ ਆਈਡੀ ਜਾਂ ਡਰਾਈਵਿੰਗ ਲਾਇਸੈਂਸ ਸਵੀਕਾਰ ਕਰਦੇ ਹਾਂ</string>
@@ -479,4 +479,22 @@
     <string name="no_dhaba_found">ਕੋਈ ਢਾਬਾ ਨਹੀਂ ਮਿਲਿਆ</string>
     <string name="dhaba_added_succesfully">ਢਾਬਾ ਸਫਲਤਾਪੂਰਵਕ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ</string>
     <string name="this_is_the_id_number_of_added_dhaba">ਇਹ ਐਡ ਕੀਤੇ ਢਾਬੇ ਦਾ ਆਈਡੀ ਨੰਬਰ ਹੈ।</string>
+    <string name="voter_id">ਵੋਟਰ ਆਈਡੀ *</string>
+    <string name="enter_voter_id_or_adhar_card">ਜਾਂ ਤਾਂ ਵੀ ਵੋਟਰ ਆਈਡੀ ਜਾਂ ਆਧਾਰ ਕਾਰਡ ਦਾਖਲ ਕਰੋ</string>
+    <string name="owner_voter_id_or_adhar_card">ਮਾਲਕ ਦੀ ਵੋਟਰ ਆਈਡੀ ਜਾਂ ਅਧਰ ਕਾਰਡ</string>
+    <string name="enter_10_digit_mobile_no">10 ਅੰਕ ਵਾਲਾ ਮੋਬਾਈਲ ਨੰਬਰ ਦਰਜ ਕਰੋ.</string>
+    <string name="otp_expires_in">ਓਟੀਪੀ ਦੀ ਮਿਆਦ ਖਤਮ ਹੋ ਜਾਂਦੀ ਹੈ</string>
+    <string name="dhaba_address_mandatory">DhaBa ਪਤਾ *</string>
+    <string name="submitted_for_approval">ਪ੍ਰਵਾਨਗੀ ਲਈ ਜਮ੍ਹਾ ਕੀਤਾ</string>
+    <string name="pending_dhabas">ਪੈਂਡਿੰਗ ਢਾਬੇ</string>
+    <string name="in_review_dhabas">ਢਾਬੇ ਸਮੀਖਿਆ ਵਿੱਚ</string>
+    <string name="active_dhabas">ਸਰਗਰਮ ਢਾਬੇ</string>
+    <string name="inactive_dhabas">ਨਾ-ਸਰਗਰਮ ਢਾਬੇ</string>
+    <string name="cities">ਸ਼ਹਿਰ</string>
+    <string name="states">ਰਾਜ</string>
+    <string name="highways">ਹਾਈਵੇਅ</string>
+    <string name="banks">ਬੈਂਕਾਂ</string>
+    <string name="failed_to_fetch">ਲਿਆਉਣ ਵਿੱਚ ਅਸਫਲ</string>
+    <string name="fields_with">" "</string>
+    <string name="asterisk_are_mandatory">ਵਾਲੇ ਖੇਤਰ ਲਾਜ਼ਮੀ ਹਨ</string>
 </resources>
