Client Feedback Fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -586,5 +586,6 @@
     <string name="choose_action">Choose Action</string>
     <string name="deleting_profile_photo">Removing Profile Photo</string>
     <string name="removed_successfully">Removed Successfully</string>
+    <string name="view_photo">View Photo</string>
 
 </resources>
