--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <string name="phone_number">Phone number</string>
     <string name="email_address">Email address *</string>
     <string name="address">Address</string>
-    <string name="pan_number">Pan Number</string>
+    <string name="pan_number">Pan Number *</string>
     <string name="aadhar_card_number">Aadhar Card Number *</string>
     <string name="upload_owner_picture">Upload Owner Picture</string>
     <string name="upload_id_proof">Upload Id proof</string>
@@ -176,9 +176,9 @@
     <string name="head">Head</string>
     <string name="bank_details">Bank Details</string>
     <string name="bank">Bank</string>
-    <string name="gst_number">GST Number</string>
-    <string name="ifsc_code">IFSC Code</string>
-    <string name="account_holder_name">Account Holder Name</string>
+    <string name="gst_number">GST Number *</string>
+    <string name="ifsc_code">IFSC Code *</string>
+    <string name="account_holder_name">Account Holder Name *</string>
     <string name="upload_pan_photo">Upload Pan Photo</string>
     <string name="blocking_system_for">Blocking System For</string>
     <string name="choose_months">Choose Months</string>
@@ -307,7 +307,7 @@
     <string name="choose_bulb_light_photo">Please choose Bulb Light photo</string>
     <string name="add_new">Add New</string>
     <string name="enter_bank_account_number">Please Enter Bank Account Number</string>
-    <string name="account_number">Bank Account Number</string>
+    <string name="account_number">Bank Account Number *</string>
     <string name="please_choose_address">Please choose address.</string>
     <string name="enter_valid_mobile">Please enter 10 digit mobile number</string>
     <string name="choose_indoor_cameras">Please choose indoor cameras.</string>
@@ -322,7 +322,7 @@
     <string name="choose_dhaba_location">Please choose dhaba location.</string>
     <string name="in_review">In Review</string>
     <string name="submit_for_approval">Submit for approval</string>
-    <string name="select_bank">Select Bank</string>
+    <string name="select_bank">Select Bank *</string>
     <string name="owner">Owner</string>
     <string name="deletion_confirmation">Do you want to delete this dhaba?</string>
     <string name="alternative_contact_person">Alternative Contact Person</string>
@@ -587,5 +587,6 @@
     <string name="deleting_profile_photo">Removing Profile Photo</string>
     <string name="removed_successfully">Removed Successfully</string>
     <string name="view_photo">View Photo</string>
+    <string name="unable_to_get_location">Unable to get current location.</string>
 
 </resources>
